# go-woff2

./: CMakeLists.txt  decoder.go  doc.go  encoder.go  go.mod  woff2.go  woff2_test.go
lib/: woff2_api.h
src/: CMakeLists.txt  woff2_api.cc  woff2_test.cc
